--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -2,8 +2,8 @@
 http://ionicframework.com/docs/theming/ */
 
 /** Ionic CSS Variables **/
-q-flex{
-  display: flex;  
+.q-flex {
+  display: flex;
 }
 
 :root {
@@ -84,7 +84,7 @@ q-flex{
  * -------------------------------------------
  */
 
- body.dark {
+body.dark {
   --ion-color-primary: #428cff;
   --ion-color-primary-rgb: 66, 140, 255;
   --ion-color-primary-contrast: #ffffff;
